--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
       <artifactId>javalin</artifactId>
       <version>${javalin.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.10</version>
+    </dependency>
     <!-- Metrics -->
     <dependency>
       <groupId>io.javalin</groupId>
